[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cost-reporter"
version = "0.1.0"
description = "Fetch actual billed API costs from LLM providers and report them to Slack and other channels."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
llm-cost-reporter = "llm_cost_reporter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_cost_reporter*"]
